spancing and comments updated

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                   <h4>$99.99 ea.<h4>
                 </div>
                 <div class="quantity-cart pad5">
-                  <button class="qty" type="button" data-func="minus" data-field="qty">-</button>
+                  <button class="qty col-xs-6" type="button" data-func="minus" data-field="qty">-</button>
                   <input type="text" name="qty" value="0" />
-                  <button class="qty" type="button" data-func="plus" data-field="qty">+</button>
+                  <button class="qty col-xs-6" type="button" data-func="plus" data-field="qty">+</button>
                 </div>
                 <div class="addToCart">
                   <input type="submit" value="Add to Cart">
